fix(): Minor error in highlight fixed.

--- a/src/main/resources/teampixl/com/pixlpos/fxml/style.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/style.css
@@ -51,7 +51,7 @@
 
 .list-pane .list-cell:selected {
     -fx-background-color: #8f9bb3;
-    -fx-text-fill: black;
+    -fx-text-fill: white;
 }
 
 .analytics-graph {
