fix(): Changing desired qty to threshold qty

--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Stock/AdminStock.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Stock/AdminStock.fxml
@@ -185,8 +185,8 @@
                                 <HBox prefHeight="0.0" prefWidth="0.0" styleClass="container-line" />
                                 <Label text="Item Name:" />
                                 <TextField fx:id="itemnamefield" prefHeight="30.0" promptText="Item Name*" />
-                                <Label layoutX="21.0" layoutY="78.0" text="Desired Quantity:" />
-                                <TextField fx:id="desiredquantityfield" layoutX="20.0" layoutY="98.0" prefHeight="30.0" promptText="Desired Quantity*" />
+                                <Label layoutX="21.0" layoutY="78.0" text="Threshold Quantity:" />
+                                <TextField fx:id="thresholdquantityfield" layoutX="20.0" layoutY="98.0" prefHeight="30.0" promptText="Threshold Quantity*" />
                                 <Label layoutX="21.0" layoutY="144.0" text="Actual Quantity:" />
                                 <TextField fx:id="actualquantityfield" layoutX="20.0" layoutY="139.0" prefHeight="30.0" promptText="Actual Quantity" />
                                 <Label text="Order Status:" />
