--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Stock/AdminStock.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Stock/AdminStock.fxml
@@ -190,7 +190,7 @@
                                 <Label layoutX="21.0" layoutY="144.0" text="Actual Quantity:" />
                                 <TextField fx:id="actualquantityfield" layoutX="20.0" layoutY="139.0" prefHeight="30.0" promptText="Actual Quantity" />
                                 <Label text="Order Status:" />
-                                <TextField fx:id="itempricefield" layoutX="20.0" layoutY="180.0" prefHeight="30.0" promptText="Order Status*" />
+                                <TextField fx:id="orderstatusfield" layoutX="20.0" layoutY="180.0" prefHeight="30.0" promptText="Order Status*" />
                                 <Label text="Item Description:" />
                                 <TextArea fx:id="itemdescriptionfield" prefHeight="200.0" prefWidth="200.0" promptText="Description*" />
                             </children>
