--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Home/AdminHome.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Home/AdminHome.fxml
@@ -53,18 +53,13 @@
             </HBox>
             <Region prefHeight="65.0" prefWidth="0.0" HBox.hgrow="ALWAYS" />
             <HBox alignment="CENTER" prefHeight="65.0" prefWidth="228.0" spacing="20.0">
-               <children>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../images/weathericons/sunny_icon.png" />
-                     </image>
-                  </ImageView>
-                  <Label fx:id="date" text="27-09-2024" textAlignment="CENTER" />
-                  <Label fx:id="time" text="10:42 AM" />
-               </children>
                <padding>
-                  <Insets right="20.0" />
+                  <Insets right="20.0"/>
                </padding>
+               <ImageView fx:id="weatherIcon" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true"
+                          preserveRatio="true"/>
+               <Label fx:id="date" text="27-09-2024" textAlignment="CENTER"/>
+               <Label fx:id="time" text="10:42 AM"/>
             </HBox>
          </children>
       </HBox>
